- fixed IE 10 issue with scrollbars

--- a/RockWeb/Themes/Rock/Styles/theme.css
+++ b/RockWeb/Themes/Rock/Styles/theme.css
@@ -5928,9 +5928,13 @@ div.aspNetDisabled {
 */
 /*#region
 // 1. HTML Overrides         */
+@-ms-viewport {
+  width: device-width;
+}
 html {
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
+  -ms-overflow-style: scrollbar;
 }
 main {
   display: block;
